--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -10,6 +10,7 @@
 @media (max-width: 991px) {
     .burger-btn {
         display: block;
+        z-index: 999;
 
         &:checked ~ .navbar__nav {
             display: block;
@@ -21,7 +22,7 @@
         position: absolute;
         background: $color4;
         height: 100vh;
-        width: 14rem;
+        width: 100vw;
         top: 0px;
         left: 0px;
     }
