--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,8 +1,11 @@
-$color1: #dd6e42;
-$color2: #5a9367;
+$color1: rgb(221, 110, 66);
+$color2: rgb(90, 147, 103);
 $color3: #13293d;
-$color4: #16324f;
+$color4: rgb(22, 50, 79);
 $color5: #d7cdcc;
+
+$color1-opac: rgba(221, 110, 66, 0.836);
+$color4-opac: rgba(22, 50, 79, 0.877);
 
 $white: #ffffff;
 $grey: #292929;
