--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -1,23 +1,40 @@
-/*-- Page Grid --*/
-body {
+/*----------------------------------------------------
+------------------------------- Table of Contents ----
+------------------------------------------------------
+
+1. Home Page
+    1.1. Home Page Template
+    1.2. Navigation
+        1.2.1. Navbar Top
+        1.2.2. Navbar Bottom
+        1.2.3. Navbar Container
+        1.2.4. Navbar Menu
+    1.3. Hero Section
+
+*/
+/*-------------------------------- 1. Home Page ----*/
+/*-- 1.1. Home Page Template --*/
+.body-home {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[12];
       grid-template-columns: repeat(12, 1fr);
 }
 
+/*------------------- 1.2. Navigation ----*/
+/*-- 1.2.1. Navbar Top --*/
 .navbar__top {
   grid-column: span 12;
   padding: 0 2rem;
 }
 
-/*--  --*/
+/*-- 1.2.2. Navbar Bottom --*/
 .navbar__bottom {
   grid-column: span 12;
   padding: 0 2rem;
 }
 
-/*--  --*/
+/*-- 1.2.3 Navbar Container --*/
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -32,7 +49,7 @@ body {
   max-width: 1200px;
 }
 
-/*--  --*/
+/*-- 1.2.4 Navbar Menu --*/
 .navbar__nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -42,13 +59,31 @@ body {
           align-items: center;
 }
 
-/*-- Links --*/
+/*----------------- 1.3. Hero Section ----*/
+.hero {
+  grid-column: span 12;
+  height: 800px;
+}
+
+/*----------------------------------------------------
+------------------------------- Table of Contents ----
+------------------------------------------------------
+
+1. Links
+    1.1. Nav Links
+2.Buttons
+    2.1. Nav Button
+    2.2. Burger Button
+3. Logo
+
+*/
+/*------------------------------------ 1. Links ----*/
 a {
   text-decoration: none;
   color: #ffffff;
 }
 
-/*-- Nav Links --*/
+/*-- 1.1. Nav Links --*/
 .nav__link {
   padding: 1rem;
   text-transform: uppercase;
@@ -60,7 +95,7 @@ a {
   background: #ffffff;
 }
 
-/*-- Buttons --*/
+/*---------------------------------- 1. Buttons ----*/
 button {
   border: none;
   background: #dd6e42;
@@ -80,17 +115,12 @@ button:active {
           transform: translateY(3px);
 }
 
+/*-- 2.1. Nav Button --*/
 .nav__btn {
   margin-left: 1.5rem;
 }
 
-/*-- Nav Logo --*/
-.navbar__logo {
-  width: 150px;
-  height: auto;
-}
-
-/*-- Burger Button --*/
+/*-- 2.2. Burger Button --*/
 .burger-btn {
   display: none;
   height: 30px;
@@ -104,25 +134,96 @@ button:active {
   outline: none;
 }
 
+/*------------------------------------- 3. Logo ----*/
+.navbar__logo {
+  width: 150px;
+  height: auto;
+}
+
 @media (max-width: 991px) {
   .burger-btn {
     display: block;
     z-index: 999;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
   }
-  .burger-btn:checked ~ .navbar__nav {
+  .burger-btn:checked + .burger-label .top {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    margin-top: 15px;
+  }
+  .burger-btn:checked + .burger-label .middle {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    margin-top: -8px;
+  }
+  .burger-btn:checked + .burger-label .bottom {
+    opacity: 0;
+  }
+  .burger-btn:checked + .burger-label + .navbar__nav {
+    -webkit-transform: translateY(100vh);
+            transform: translateY(100vh);
+  }
+  .burger-label {
+    background-color: transparent;
+    cursor: pointer;
+    z-index: 3;
+    position: absolute;
+    right: 35px;
+  }
+  .bar {
     display: block;
+    width: 30px;
+    height: 3px;
+    margin: 5px 0;
+    background-color: #ffffff;
+    z-index: 1000;
+    -webkit-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
   }
   .navbar__nav {
-    display: none;
-    position: absolute;
-    background: #16324f;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: fixed;
+    background: rgba(22, 50, 79, 0.877);
     height: 100vh;
     width: 100vw;
-    top: 0px;
+    top: -100vh;
     left: 0px;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+  }
+  .nav__item {
+    margin: 1.5rem 0;
+  }
+  .nav__btn {
+    margin-left: 0;
   }
 }
 
+/*----------------------------------------------------
+------------------------------- Table of Contents ----
+------------------------------------------------------
+
+1. Universal
+2. Body
+3. Navbar
+    3.1. Navbar Top
+    3.2. Navbar Bottom
+    3.3. Navbar Phone
+4. Home Page
+    4.1. Hero Section
+
+*/
 /*-- Universal --*/
 *,
 *:before,
@@ -131,9 +232,9 @@ button:active {
           box-sizing: border-box;
 }
 
-/*-- General --*/
+/*-- Body --*/
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
 }
 
@@ -151,5 +252,13 @@ body {
 .navbar__phone {
   color: #ffffff;
   font-weight: bold;
+}
+
+/*-- Hero --*/
+.hero {
+  background: url("/src/images/1.jpg") center center no-repeat;
+  background-size: cover;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
 }
 /*# sourceMappingURL=styles.css.map */
