--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -1,49 +1,93 @@
-// Extra small devices (portrait phones, less than 576px)
-@media (max-width: 575px) {
-}
+// // Extra small devices (portrait phones, less than 576px)
+// @media (max-width: 575px) {
+// }
 
-// Small devices (landscape phones, less than 768px)
-@media (max-width: 767px) {
-}
+// // Small devices (landscape phones, less than 768px)
+// @media (max-width: 767px) {
+// }
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991px) {
     .burger-btn {
         display: block;
         z-index: 999;
+        appearance: none;
 
-        &:checked ~ .navbar__nav {
-            display: block;
+        &:checked + .burger-label .top {
+            transform: rotate(-45deg);
+            margin-top: 15px;
+        }
+
+        &:checked + .burger-label .middle {
+            transform: rotate(45deg);
+            margin-top: -8px;
+        }
+
+        &:checked + .burger-label .bottom {
+            opacity: 0;
+        }
+
+        &:checked + .burger-label + .navbar__nav {
+            transform: translateY(100vh);
         }
     }
 
-    .navbar__nav {
-        display: none;
+    .burger-label {
+        background-color: transparent;
+        cursor: pointer;
+        z-index: 3;
         position: absolute;
-        background: $color4;
+        right: 35px;
+    }
+
+    .bar {
+        display: block;
+        width: 30px;
+        height: 3px;
+        margin: 5px 0;
+        background-color: $white;
+        z-index: 1000;
+        transition: all 0.1s ease-in-out;
+    }
+
+    .navbar__nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: fixed;
+        background: $color4-opac;
         height: 100vh;
         width: 100vw;
-        top: 0px;
+        top: -100vh;
         left: 0px;
+        transition: all 0.4s ease-in-out;
+    }
+
+    .nav__item {
+        margin: 1.5rem 0;
+    }
+
+    .nav__btn {
+        margin-left: 0;
     }
 }
 
-// Large devices (desktops, less than 1200px)
-@media (max-width: 1199px) {
-}
+// // Large devices (desktops, less than 1200px)
+// @media (max-width: 1199px) {
+// }
 
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-}
+// // Small devices (landscape phones, 576px and up)
+// @media (min-width: 576px) {
+// }
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-}
+// // Medium devices (tablets, 768px and up)
+// @media (min-width: 768px) {
+// }
 
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-}
+// // Large devices (desktops, 992px and up)
+// @media (min-width: 992px) {
+// }
 
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-}
+// // Extra large devices (large desktops, 1200px and up)
+// @media (min-width: 1200px) {
+// }
