--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -6,6 +6,7 @@ $color5: #d7cdcc;
 
 $color1-opac: rgba(221, 110, 66, 0.836);
 $color4-opac: rgba(22, 50, 79, 0.877);
+$grey-opac: rgba(0, 0, 0, 0.733);
 
 $white: #ffffff;
 $grey: #292929;
