--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -90,8 +90,77 @@
 /*-- Services Section --*/
 .services {
   grid-column: span 12;
-  height: 5500px;
-  background: #d7cdcc;
+}
+
+.services__container-outer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin: 6rem auto 5rem auto;
+  max-width: 1200px;
+}
+
+.services__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 2rem;
+}
+
+.services-header {
+  padding: 0 2rem 2rem 2rem;
+}
+
+/*-- About Section --*/
+.about {
+  grid-column: span 12;
+}
+
+.about__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 2rem;
+}
+
+.about__video {
+  width: 50%;
+}
+
+.about__video {
+  position: relative;
+  padding-bottom: 30%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+.about__video iframe,
+.about__video object,
+.about__video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.about__info {
+  width: 50%;
 }
 
 /*----------------------------------------------------
@@ -134,7 +203,7 @@ button {
   padding: 0.9rem 1.5rem;
   cursor: pointer;
   font-family: "Poppins", sans-serif;
-  font-size: 1rem;
+  font-size: 1em;
   font-weight: 700;
 }
 
@@ -176,6 +245,7 @@ button:active {
 
 /*-- To Top Button --*/
 .btn-to-top {
+  display: none;
   position: fixed;
   background: #13293d;
   right: 10px;
@@ -212,11 +282,63 @@ h1, h2, h3 {
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: 3em;
 }
 
 h3 {
-  font-size: 2rem;
+  font-size: 2em;
+}
+
+.header-margin {
+  margin-left: 2rem;
+}
+
+/*---------------------------------- 5. Cards ----*/
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+  overflow: hidden;
+  margin: 0 0.5rem 1rem 0.5rem;
+  cursor: pointer;
+}
+
+.card:hover .card__img {
+  -webkit-filter: brightness(20%);
+          filter: brightness(20%);
+}
+
+.card:hover .card__hidden {
+  -webkit-transform: translate(300px);
+          transform: translate(300px);
+}
+
+.card__caption {
+  position: absolute;
+  left: 2rem;
+  top: 2rem;
+  padding-right: 1rem;
+}
+
+.card__hidden {
+  position: absolute;
+  top: 7rem;
+  left: -300px;
+  height: 100%;
+  width: 100%;
+  padding: 0 1rem 1rem 2rem;
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+
+.card__hidden-text {
+  color: #ffffff;
+  margin-bottom: 1.2rem;
 }
 
 @-webkit-keyframes bg-scale {
@@ -294,12 +416,15 @@ h3 {
 }
 
 @media (max-width: 575px) {
-  h1, h2, h3 {
+  .hero h1, .hero h2, .hero h3 {
     font-size: 12vw;
   }
   .btn-large {
     padding: 0.5rem 1rem;
     margin-top: 2rem;
+  }
+  h2 {
+    font-size: 2rem;
   }
 }
 
@@ -374,19 +499,19 @@ h3 {
 }
 
 @media (min-width: 576px) {
-  h1, h2, h3 {
+  .hero h1, .hero h2, .hero h3 {
     font-size: 10vw;
   }
 }
 
 @media (min-width: 992px) {
-  h1, h2, h3 {
+  .hero h1, .hero h2, .hero h3 {
     font-size: 8vw;
   }
 }
 
 @media (min-width: 1200px) {
-  h1, h2, h3 {
+  .hero h1, .hero h2, .hero h3 {
     font-size: 6vw;
   }
 }
@@ -457,5 +582,15 @@ body {
   background-size: cover;
   -webkit-animation: bg-scale 20s linear infinite;
           animation: bg-scale 20s linear infinite;
+}
+
+/*-- 4.2. Services --*/
+.services {
+  background: #16324f;
+}
+
+/*-- 4.3. About --*/
+.about {
+  background: #d7cdcc;
 }
 /*# sourceMappingURL=styles.css.map */
