--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -15,7 +15,6 @@
 
 */
 
-
 /*--------------------------- 1. Page Templates ----*/
 
 /*-- 1.1. Home Page Template --*/
@@ -23,7 +22,6 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
 }
-
 
 /*------------------------------- 2. Navigation ----*/
 
@@ -54,7 +52,6 @@
     align-items: center;
 }
 
-
 /*----------------------- 3. Home Page Sections ----*/
 
 /*-- 3.1. Hero Section ----*/
@@ -78,6 +75,60 @@
 /*-- Services Section --*/
 .services {
     grid-column: span 12;
-    height: 5500px;
-    background: $color5;
+}
+
+.services__container-outer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 6rem auto 5rem auto;
+    max-width: 1200px;
+}
+
+.services__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.services-header {
+    padding: 0 2rem 2rem 2rem;
+}
+
+/*-- About Section --*/
+.about {
+    grid-column: span 12;
+}
+
+.about__inner {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 2rem;
+}
+
+.about__video {
+    width: 50%;
+}
+
+.about__video {
+    position: relative;
+    padding-bottom: 30%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.about__video iframe,
+.about__video object,
+.about__video embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.about__info {
+    width: 50%;
 }
