--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -1,13 +1,18 @@
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575px) {
-    h1 {
+    .hero h1 {
         font-size: 12vw;
-      }
+    }
 
-  .btn-large {
-    padding: 0.5rem 1rem;
-    margin-top: 2rem;
-  }
+    .btn-large {
+        padding: 0.5rem 1rem;
+        margin-top: 2rem;
+    }
+
+    h2 {
+      font-size: 2rem;
+    }
+
 }
 
 // // Small devices (landscape phones, less than 768px)
@@ -16,83 +21,79 @@
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991px) {
-  .burger-btn {
-    display: block;
-    z-index: 2;
-    appearance: none;
+    .burger-btn {
+        display: block;
+        z-index: 2;
+        appearance: none;
 
-    &:checked + .burger-label .top {
-      transform: rotate(-45deg);
-      margin-top: 15px;
+        &:checked + .burger-label .top {
+            transform: rotate(-45deg);
+            margin-top: 15px;
+        }
+
+        &:checked + .burger-label .middle {
+            transform: rotate(45deg);
+            margin-top: -8px;
+        }
+
+        &:checked + .burger-label .bottom {
+            opacity: 0;
+        }
+
+        &:checked + .burger-label + .navbar__nav {
+            transform: translateY(100vh);
+        }
     }
 
-    &:checked + .burger-label .middle {
-      transform: rotate(45deg);
-      margin-top: -8px;
+    .burger-label {
+        background-color: transparent;
+        cursor: pointer;
+        z-index: 2;
+        position: absolute;
+        right: 35px;
     }
 
-    &:checked + .burger-label .bottom {
-      opacity: 0;
+    .bar {
+        display: block;
+        width: 30px;
+        height: 3px;
+        margin: 5px 0;
+        background-color: $white;
+        transition: all 0.1s ease-in-out;
     }
 
-    &:checked + .burger-label + .navbar__nav {
-      transform: translateY(100vh);
+    .navbar__nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: fixed;
+        background: $color4-opac;
+        height: 100vh;
+        width: 100vw;
+        top: -100vh;
+        left: 0px;
+        z-index: 1;
+        transition: all 0.4s ease-in-out;
     }
-  }
 
-  .burger-label {
-    background-color: transparent;
-    cursor: pointer;
-    z-index: 2;
-    position: absolute;
-    right: 35px;
-  }
+    .nav__item {
+        margin: 1.5rem 0;
+    }
 
-  .bar {
-    display: block;
-    width: 30px;
-    height: 3px;
-    margin: 5px 0;
-    background-color: $white;
-    transition: all 0.1s ease-in-out;
-  }
-
-  .navbar__nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: fixed;
-    background: $color4-opac;
-    height: 100vh;
-    width: 100vw;
-    top: -100vh;
-    left: 0px;
-    z-index: 1;
-    transition: all 0.4s ease-in-out;
-  }
-
-  .nav__item {
-    margin: 1.5rem 0;
-  }
-
-  .nav__btn {
-    margin-left: 0;
-  }
+    .nav__btn {
+        margin-left: 0;
+    }
 }
 
 // // Large devices (desktops, less than 1200px)
 // @media (max-width: 1199px) {
 // }
 
-
-
-
-
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-    h1 {
+    .hero h1 {
         font-size: 10vw;
-      }
+    }
 }
 
 // // Medium devices (tablets, 768px and up)
@@ -101,14 +102,14 @@
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-    h1 {
+    .hero h1 {
         font-size: 8vw;
-      }
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-    h1 {
+    .hero h1 {
         font-size: 6vw;
-      }
+    }
 }
