--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -1,4 +1,5 @@
-@import "variables", "mixins", "layout", "components", "animations", "media-queries";
+@import "variables", "mixins", "layout", "components", "animations",
+    "media-queries";
 
 /*----------------------------------------------------
 ------------------------------- Table of Contents ----
@@ -19,52 +20,64 @@
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /*------------------------------------- 2. Body ----*/
 body {
-  font-family: "Poppins", sans-serif;
-  font-size: 16px;
-  text-rendering: optimizeLegibility;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    text-rendering: optimizeLegibility;
 }
 
 /*------------------------------- 3. Navigation ----*/
 
 /*-- 3.1. Navbar Top --*/
 .navbar__top {
-  background: $color1;
-  color: $grey;
+    background: $color1;
+    color: $grey;
 }
 
 /*-- 3.2. Navbar Bottom --*/
 .navbar__bottom {
-  background: $color4;
-  color: $white;
+    background: $color4;
+    color: $white;
 }
 
 /*-- 3.3. Navbar Phone --*/
 .navbar__phone {
-  color: $white;
-  font-weight: bold;
+    color: $white;
+    font-weight: bold;
 }
 
 /*-------------------------------- 4. Home Page ----*/
 
 /*-- 4.1. Hero --*/
 .hero {
-  position: relative;
-  overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 
 .hero::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background: linear-gradient($grey-opac),
-    url("/src/images/1.jpg") center center no-repeat;
-  background-size: cover;
-  animation: bg-scale 20s linear infinite;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: linear-gradient($grey-opac),
+        url("/src/images/1.jpg") center center no-repeat;
+    background-size: cover;
+    animation: bg-scale 20s linear infinite;
+}
+
+/*-- 4.2. Services --*/
+
+.services {
+    background: $color4;
+    
+}
+
+/*-- 4.3. About --*/
+.about {
+  background: $color5;
 }
