--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -83,6 +83,10 @@
     .nav__btn {
         margin-left: 0;
     }
+
+    .about__video, .about__info {
+        grid-column: span 12;
+    }
 }
 
 // // Large devices (desktops, less than 1200px)
