--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -19,116 +19,122 @@
 
 /*-- 1.1. Home Page Template --*/
 .body-home {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
 }
 
 /*------------------------------- 2. Navigation ----*/
 
 /*-- 2.1. Navbar Top --*/
 .navbar__top {
-    grid-column: span 12;
-    padding: 0 2rem;
+  grid-column: span 12;
+  padding: 0 2rem;
 }
 
 /*-- 2.2. Navbar Bottom --*/
 .navbar__bottom {
-    grid-column: span 12;
-    padding: 0 2rem;
+  grid-column: span 12;
+  padding: 0 2rem;
 }
 
 /*-- 2.3. Navbar Container --*/
 .navbar__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0.8rem auto;
-    max-width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.8rem auto;
+  max-width: 1200px;
 }
 
 /*-- 2.4. Navbar Menu --*/
 .navbar__nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 /*----------------------- 3. Home Page Sections ----*/
 
 /*-- 3.1. Hero Section ----*/
 .hero {
-    grid-column: span 12;
+  grid-column: span 12;
 }
 
 .hero__container-outer {
-    padding: 0 2rem;
+  padding: 0 2rem;
 }
 
 /*-- 3.2. Hero Container --*/
 .hero__container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 6rem auto;
-    max-width: 1200px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 6rem auto;
+  max-width: 1200px;
 }
 
 /*-- Services Section --*/
 .services {
-    grid-column: span 12;
+  grid-column: span 12;
 }
 
 .services__container-outer {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 6rem auto 5rem auto;
-    max-width: 1200px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 6rem auto 5rem auto;
+  max-width: 1200px;
 }
 
 .services__container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 2rem;
 }
 
 .services-header {
-    padding: 0 2rem 2rem 2rem;
+  padding: 0 2rem 2rem 2rem;
 }
+
+
+
+
+
+
+
+
 
 /*-- About Section --*/
 .about {
-    grid-column: span 12;
+  grid-column: span 12;
 }
 
 .about__inner {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
     margin: 2rem;
 }
 
 .about__video {
-    width: 50%;
-}
+  grid-column: span 6;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
 
-.about__video {
-    position: relative;
-    padding-bottom: 30%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden;
-}
-
-.about__video iframe,
-.about__video object,
-.about__video embed {
+  & iframe,
+  & object,
+  & embed {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+  }
 }
 
+
 .about__info {
-    width: 50%;
+  grid-column: span 6;
 }
