--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -73,11 +73,11 @@ body {
 /*-- 4.2. Services --*/
 
 .services {
-    background: $color4;
+    background: $white;
     
 }
 
 /*-- 4.3. About --*/
 .about {
-  background: $color5;
+  background: $color4;
 }
