--- a/src/styles/scss/_components.scss
+++ b/src/styles/scss/_components.scss
@@ -123,7 +123,7 @@ h2 {
 
 h3 {
     @extend h1;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .header-margin {
@@ -133,40 +133,23 @@ h3 {
 /*---------------------------------- 5. Cards ----*/
 
 .card {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    overflow: hidden;
-    margin: 0 0.5rem 1rem 0.5rem;
+    height: auto;
+    width: 250px;
     cursor: pointer;
+    box-shadow: 0px 0px 15px 1px $grey;
 
     &:hover .card__img {
         filter: brightness(20%);
     }
+}
 
-    &:hover .card__hidden {
-        transform: translate(300px);
-    }
+.card__img {
+    width: 250px;
+    height: 250px;
 }
 
 .card__caption {
-    position: absolute;
-    left: 2rem;
-    top: 2rem;
-    padding-right: 1rem;
-}
-
-.card__hidden {
-    position: absolute;
-    top: 7rem;
-    left: -300px;
-    height: 100%;
-    width: 100%;
-    padding: 0 1rem 1rem 2rem;
-    transition: all 0.5s ease-in;
 }
 
 .card__hidden-text {
-    color: $white;
-    margin-bottom: 1.2rem;
 }
