--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -72,33 +72,24 @@
   max-width: 1200px;
 }
 
+
+
+
+
+
 /*-- Services Section --*/
 .services {
   grid-column: span 12;
-}
-
-.services__container-outer {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 6rem auto 5rem auto;
-  max-width: 1200px;
+  justify-items: center;
 }
 
 .services__container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 250px);
+  grid-gap: 40px;
   justify-content: center;
-  margin-top: 2rem;
+  margin: 4rem 0;
 }
-
-.services-header {
-  padding: 0 2rem 2rem 2rem;
-}
-
-
-
-
 
 
 
@@ -110,9 +101,9 @@
 }
 
 .about__inner {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    margin: 2rem;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  margin: 2rem;
 }
 
 .about__video {
@@ -133,7 +124,6 @@
     height: 100%;
   }
 }
-
 
 .about__info {
   grid-column: span 6;
