--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -1,103 +1,116 @@
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575px) {
-    .hero h1 {
-        font-size: 12vw;
-    }
+  .hero h1 {
+    font-size: 12vw;
+  }
 
-    .btn-large {
-        padding: 0.5rem 1rem;
-        margin-top: 2rem;
-    }
+  .btn-large {
+    padding: 0.5rem 1rem;
+    margin-top: 2rem;
+  }
 
-    h2 {
-      font-size: 2rem;
-    }
-
+  h2 {
+    font-size: 2rem;
+  }
 }
 
-// // Small devices (landscape phones, less than 768px)
-// @media (max-width: 767px) {
-// }
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767px) {
+  .services__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991px) {
-    .burger-btn {
-        display: block;
-        z-index: 2;
-        appearance: none;
+  .burger-btn {
+    display: block;
+    z-index: 2;
+    appearance: none;
 
-        &:checked + .burger-label .top {
-            transform: rotate(-45deg);
-            margin-top: 15px;
-        }
-
-        &:checked + .burger-label .middle {
-            transform: rotate(45deg);
-            margin-top: -8px;
-        }
-
-        &:checked + .burger-label .bottom {
-            opacity: 0;
-        }
-
-        &:checked + .burger-label + .navbar__nav {
-            transform: translateY(100vh);
-        }
+    &:checked + .burger-label .top {
+      transform: rotate(-45deg);
+      margin-top: 15px;
     }
 
-    .burger-label {
-        background-color: transparent;
-        cursor: pointer;
-        z-index: 2;
-        position: absolute;
-        right: 35px;
+    &:checked + .burger-label .middle {
+      transform: rotate(45deg);
+      margin-top: -8px;
     }
 
-    .bar {
-        display: block;
-        width: 30px;
-        height: 3px;
-        margin: 5px 0;
-        background-color: $white;
-        transition: all 0.1s ease-in-out;
+    &:checked + .burger-label .bottom {
+      opacity: 0;
     }
 
-    .navbar__nav {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        position: fixed;
-        background: $color4-opac;
-        height: 100vh;
-        width: 100vw;
-        top: -100vh;
-        left: 0px;
-        z-index: 1;
-        transition: all 0.4s ease-in-out;
+    &:checked + .burger-label + .navbar__nav {
+      transform: translateY(100vh);
     }
+  }
 
-    .nav__item {
-        margin: 1.5rem 0;
-    }
+  .burger-label {
+    background-color: transparent;
+    cursor: pointer;
+    z-index: 2;
+    position: absolute;
+    right: 35px;
+  }
 
-    .nav__btn {
-        margin-left: 0;
-    }
+  .bar {
+    display: block;
+    width: 30px;
+    height: 3px;
+    margin: 5px 0;
+    background-color: $white;
+    transition: all 0.1s ease-in-out;
+  }
 
-    .about__video, .about__info {
-        grid-column: span 12;
-    }
+  .navbar__nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    background: $color4-opac;
+    height: 100vh;
+    width: 100vw;
+    top: -100vh;
+    left: 0px;
+    z-index: 1;
+    transition: all 0.4s ease-in-out;
+  }
+
+  .nav__item {
+    margin: 1.5rem 0;
+  }
+
+  .nav__btn {
+    margin-left: 0;
+  }
+
+  .about__video,
+  .about__info {
+    grid-column: span 12;
+  }
 }
 
-// // Large devices (desktops, less than 1200px)
-// @media (max-width: 1199px) {
-// }
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199px) {
+  .services__container {
+    grid-template-columns: repeat(2, 350px);
+  }
+
+  .card {
+    height: 350px;
+    width: 350px;
+  }
+}
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-    .hero h1 {
-        font-size: 10vw;
-    }
+  .hero h1 {
+    font-size: 10vw;
+  }
 }
 
 // // Medium devices (tablets, 768px and up)
@@ -106,14 +119,14 @@
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-    .hero h1 {
-        font-size: 8vw;
-    }
+  .hero h1 {
+    font-size: 8vw;
+  }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-    .hero h1 {
-        font-size: 6vw;
-    }
+  .hero h1 {
+    font-size: 6vw;
+  }
 }
