--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -96,49 +96,83 @@
 .services__container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (250px)[4];
-      grid-template-columns: repeat(4, 250px);
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
   grid-gap: 40px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 4rem 0;
+  margin: 4rem 10%;
 }
 
-/*-- About Section --*/
-.about {
+/*-- How It Works Section --*/
+.how-works {
   grid-column: span 12;
+  margin: 4rem 2rem;
 }
 
-.about__inner {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[12];
-      grid-template-columns: repeat(12, 1fr);
-  margin: 2rem;
+.how-works__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 4rem;
 }
 
-.about__video {
-  grid-column: span 6;
+.item-outer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  width: 250px;
+  height: 250px;
+  margin: 0 1rem;
   position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
-  height: 0;
-  overflow: hidden;
+  background: #16324f;
+  color: #ffffff;
+  border-radius: 0 10rem 10rem 10rem;
 }
 
-.about__video iframe,
-.about__video object,
-.about__video embed {
+.item-outer__header {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 10px;
+  left: 10px;
 }
 
-.about__info {
-  grid-column: span 6;
+.how-works__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  width: 250px;
+  height: 250px;
+  margin: 0 1rem;
+  padding: 0 3rem;
+  background: #16324f;
+  color: #ffffff;
+  border-radius: 10rem;
 }
 
 /*----------------------------------------------------
@@ -241,7 +275,6 @@ button:active {
 /*---------------------------------- 4. Headers ----*/
 h1, h2, h3 {
   font-weight: 900;
-  color: #ffffff;
 }
 
 .header-top {
@@ -271,23 +304,51 @@ h3 {
   margin-left: 2rem;
 }
 
-/*---------------------------------- 5. Cards ----*/
+/*------------------------------------ 5. Cards ----*/
 .card {
   height: auto;
-  width: 250px;
+  width: 100%;
+  min-width: 250px;
   cursor: pointer;
-  -webkit-box-shadow: 0px 0px 15px 1px #333333;
-          box-shadow: 0px 0px 15px 1px #333333;
+  -webkit-box-shadow: 0 4px 8px 0 #616161;
+          box-shadow: 0 4px 8px 0 #616161;
+  -webkit-transition: -webkit-box-shadow 0.3s;
+  transition: -webkit-box-shadow 0.3s;
+  transition: box-shadow 0.3s;
+  transition: box-shadow 0.3s, -webkit-box-shadow 0.3s;
 }
 
-.card:hover .card__img {
-  -webkit-filter: brightness(20%);
-          filter: brightness(20%);
+.card:hover {
+  -webkit-box-shadow: 0 8px 16px 0 #616161;
+          box-shadow: 0 8px 16px 0 #616161;
 }
 
-.card__img {
-  width: 250px;
-  height: 250px;
+.card:hover .card__caption {
+  background: #dd6e42;
+  color: #ffffff;
+}
+
+.card__img img {
+  max-width: 100%;
+  height: auto;
+}
+
+.card__caption {
+  padding: 1.2rem;
+  color: #616161;
+}
+
+.card__caption__header {
+  margin-bottom: 1rem;
+  font-weight: normal;
+}
+
+/*-------------------------- 6. Horizontal Rule ----*/
+hr {
+  grid-column: span 12;
+  width: 80%;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.178);
 }
 
 @-webkit-keyframes bg-scale {
@@ -460,20 +521,13 @@ h3 {
   .nav__btn {
     margin-left: 0;
   }
-  .about__video,
-  .about__info {
-    grid-column: span 12;
-  }
 }
 
 @media (max-width: 1199px) {
   .services__container {
-    -ms-grid-columns: (350px)[2];
-        grid-template-columns: repeat(2, 350px);
-  }
-  .card {
-    height: 350px;
-    width: 350px;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
   }
 }
 
@@ -521,14 +575,20 @@ h3 {
 body {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
+  color: #616161;
   text-rendering: optimizeLegibility;
+}
+
+/*--------------------------------------------------------------------------------------------*/
+p {
+  line-height: 1.5rem;
 }
 
 /*------------------------------- 3. Navigation ----*/
 /*-- 3.1. Navbar Top --*/
 .navbar__top {
   background: #dd6e42;
-  color: #333333;
+  color: #616161;
 }
 
 /*-- 3.2. Navbar Bottom --*/
@@ -563,13 +623,25 @@ body {
           animation: bg-scale 20s linear infinite;
 }
 
+.header-top,
+.header-middle,
+.header-bottom {
+  color: #ffffff;
+}
+
 /*-- 4.2. Services --*/
 .services {
   background: #ffffff;
 }
 
-/*-- 4.3. About --*/
-.about {
-  background: #16324f;
+/*-- 4.3. How It Works --*/
+.how-works {
+  background: #ffffff;
+}
+
+.how-works__img {
+  width: 100px;
+  height: auto;
+  margin-bottom: 1rem;
 }
 /*# sourceMappingURL=styles.css.map */
