--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -72,11 +72,6 @@
   max-width: 1200px;
 }
 
-
-
-
-
-
 /*-- Services Section --*/
 .services {
   grid-column: span 12;
@@ -85,46 +80,56 @@
 
 .services__container {
   display: grid;
-  grid-template-columns: repeat(4, 250px);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 40px;
   justify-content: center;
-  margin: 4rem 0;
+  margin: 4rem 10%;
 }
 
-
-
-
-
-/*-- About Section --*/
-.about {
+/*-- How It Works Section --*/
+.how-works {
   grid-column: span 12;
+  margin: 4rem 2rem;
 }
 
-.about__inner {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  margin: 2rem;
+.how-works__container {
+  display: flex;
+  justify-content: center;
+  margin-top: 4rem;
 }
 
-.about__video {
-  grid-column: span 6;
+.item-outer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 250px;
+  height: 250px;
+  margin: 0 1rem;
   position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
-  height: 0;
-  overflow: hidden;
-
-  & iframe,
-  & object,
-  & embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
+  background: $color4;
+  color: $white;
+  border-radius: 0 10rem 10rem 10rem;
 }
 
-.about__info {
-  grid-column: span 6;
+.item-outer__header {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.how-works__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 250px;
+  height: 250px;
+  margin: 0 1rem;
+  padding: 0 3rem;
+  background: $color4;
+  color: $white;
+  border-radius: 10rem;
 }
