--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -27,7 +27,13 @@
 body {
     font-family: "Poppins", sans-serif;
     font-size: 16px;
+    color: $grey;
     text-rendering: optimizeLegibility;
+}
+
+/*--------------------------------------------------------------------------------------------*/
+p {
+    line-height: 1.5rem;
 }
 
 /*------------------------------- 3. Navigation ----*/
@@ -70,6 +76,12 @@ body {
     animation: bg-scale 20s linear infinite;
 }
 
+.header-top,
+.header-middle,
+.header-bottom {
+    color: $white;
+}
+
 /*-- 4.2. Services --*/
 
 .services {
@@ -77,7 +89,13 @@ body {
     
 }
 
-/*-- 4.3. About --*/
-.about {
-  background: $color4;
+/*-- 4.3. How It Works --*/
+.how-works {
+  background: $white;
+}
+
+.how-works__img {
+    width: 100px;
+    height: auto;
+    margin-bottom: 1rem;
 }
