finished about section / added a footer

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -111,17 +111,19 @@
   margin: 4rem 2rem;
 }
 
-.how-works__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.how-works__inner {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 40px 5px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 4rem;
+  margin: 4rem 10% 0 10%;
 }
 
-.item-outer {
+.item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -145,13 +147,13 @@
   border-radius: 0 10rem 10rem 10rem;
 }
 
-.item-outer__header {
+.item__header {
   position: absolute;
   top: 10px;
   left: 10px;
 }
 
-.how-works__item {
+.item__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -173,6 +175,70 @@
   background: #16324f;
   color: #ffffff;
   border-radius: 10rem;
+}
+
+/*-- About Section --*/
+.about {
+  grid-column: span 12;
+}
+
+.about__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1200px;
+  margin: 2rem auto;
+}
+
+.about__img {
+  width: 50%;
+  height: auto;
+  margin-left: 2rem;
+}
+
+.about__info {
+  width: 50%;
+  padding: 2rem;
+}
+
+.about__info h3 {
+  margin-bottom: 2rem;
+  color: #c85324;
+}
+
+.about__info p:first-of-type {
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+/*------------------------------- 2. Footer ----*/
+footer {
+  grid-column: span 12;
+  padding: 4rem 0;
+}
+
+.footer-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+.footer-top__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-top__left span:first-of-type {
+  margin-right: 0.8rem;
 }
 
 /*----------------------------------------------------
@@ -310,8 +376,8 @@ h3 {
   width: 100%;
   min-width: 250px;
   cursor: pointer;
-  -webkit-box-shadow: 0 4px 8px 0 #616161;
-          box-shadow: 0 4px 8px 0 #616161;
+  -webkit-box-shadow: 0 4px 8px 0 #3f3f3f;
+          box-shadow: 0 4px 8px 0 #3f3f3f;
   -webkit-transition: -webkit-box-shadow 0.3s;
   transition: -webkit-box-shadow 0.3s;
   transition: box-shadow 0.3s;
@@ -319,8 +385,8 @@ h3 {
 }
 
 .card:hover {
-  -webkit-box-shadow: 0 8px 16px 0 #616161;
-          box-shadow: 0 8px 16px 0 #616161;
+  -webkit-box-shadow: 0 8px 16px 0 #3f3f3f;
+          box-shadow: 0 8px 16px 0 #3f3f3f;
 }
 
 .card:hover .card__caption {
@@ -335,7 +401,7 @@ h3 {
 
 .card__caption {
   padding: 1.2rem;
-  color: #616161;
+  color: #3f3f3f;
 }
 
 .card__caption__header {
@@ -349,6 +415,13 @@ hr {
   width: 80%;
   border: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.178);
+}
+
+/*-------------------------- 7. Icons ----*/
+.footer-top__icon {
+  width: 50px;
+  height: 50px;
+  margin: 0 0.5rem;
 }
 
 @-webkit-keyframes bg-scale {
@@ -439,7 +512,8 @@ hr {
 }
 
 @media (max-width: 767px) {
-  .services__container {
+  .services__container,
+  .how-works__inner {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -450,6 +524,27 @@ hr {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .how-works {
+    margin: 4rem 0;
+  }
+  .how-works h2 {
+    margin: 0 2rem;
+  }
+  .about__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0;
+  }
+  .about__img,
+  .about__info {
+    width: 100%;
+  }
+  .about__img {
+    min-height: 40vh;
+    margin-left: 0;
   }
 }
 
@@ -524,7 +619,8 @@ hr {
 }
 
 @media (max-width: 1199px) {
-  .services__container {
+  .services__container,
+  .how-works__inner {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
     justify-items: center;
@@ -575,7 +671,7 @@ hr {
 body {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
-  color: #616161;
+  color: #3f3f3f;
   text-rendering: optimizeLegibility;
 }
 
@@ -588,7 +684,7 @@ p {
 /*-- 3.1. Navbar Top --*/
 .navbar__top {
   background: #dd6e42;
-  color: #616161;
+  color: #3f3f3f;
 }
 
 /*-- 3.2. Navbar Bottom --*/
@@ -639,9 +735,25 @@ p {
   background: #ffffff;
 }
 
-.how-works__img {
+.item__img {
   width: 100px;
   height: auto;
   margin-bottom: 1rem;
+}
+
+/*-- 4.4. About --*/
+.about {
+  background: #d7cdcc;
+}
+
+.about__img {
+  background: url("/src/images/1.jpg") center center no-repeat;
+  background-size: cover;
+}
+
+/*-- Footer --*/
+footer {
+  background: #16324f;
+  color: #ffffff;
 }
 /*# sourceMappingURL=styles.css.map */
