--- a/src/styles/scss/_components.scss
+++ b/src/styles/scss/_components.scss
@@ -171,3 +171,11 @@ hr {
     border: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.178);
 }
+
+
+/*-------------------------- 7. Icons ----*/
+.footer-top__icon {
+    width: 50px;
+    height: 50px;
+    margin: 0 0.5rem;
+}
