--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -19,117 +19,174 @@
 
 /*-- 1.1. Home Page Template --*/
 .body-home {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
 }
 
 /*------------------------------- 2. Navigation ----*/
 
 /*-- 2.1. Navbar Top --*/
 .navbar__top {
-  grid-column: span 12;
-  padding: 0 2rem;
+    grid-column: span 12;
+    padding: 0 2rem;
 }
 
 /*-- 2.2. Navbar Bottom --*/
 .navbar__bottom {
-  grid-column: span 12;
-  padding: 0 2rem;
+    grid-column: span 12;
+    padding: 0 2rem;
 }
 
 /*-- 2.3. Navbar Container --*/
 .navbar__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0.8rem auto;
-  max-width: 1200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0.8rem auto;
+    max-width: 1200px;
 }
 
 /*-- 2.4. Navbar Menu --*/
 .navbar__nav {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 /*----------------------- 3. Home Page Sections ----*/
 
 /*-- 3.1. Hero Section ----*/
 .hero {
-  grid-column: span 12;
+    grid-column: span 12;
 }
 
 .hero__container-outer {
-  padding: 0 2rem;
+    padding: 0 2rem;
 }
 
 /*-- 3.2. Hero Container --*/
 .hero__container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 6rem auto;
-  max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 6rem auto;
+    max-width: 1200px;
 }
 
 /*-- Services Section --*/
 .services {
-  grid-column: span 12;
-  justify-items: center;
+    grid-column: span 12;
+    justify-items: center;
 }
 
 .services__container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 40px;
-  justify-content: center;
-  margin: 4rem 10%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 40px;
+    justify-content: center;
+    margin: 4rem 10%;
 }
 
 /*-- How It Works Section --*/
 .how-works {
-  grid-column: span 12;
-  margin: 4rem 2rem;
+    grid-column: span 12;
+    margin: 4rem 2rem;
 }
 
-.how-works__container {
-  display: flex;
-  justify-content: center;
-  margin-top: 4rem;
+.how-works__inner {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 40px 5px;
+    justify-content: center;
+    margin: 4rem 10% 0 10%;
 }
 
-.item-outer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  width: 250px;
-  height: 250px;
-  margin: 0 1rem;
-  position: relative;
-  background: $color4;
-  color: $white;
-  border-radius: 0 10rem 10rem 10rem;
+.item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 250px;
+    height: 250px;
+    margin: 0 1rem;
+    position: relative;
+    background: $color4;
+    color: $white;
+    border-radius: 0 10rem 10rem 10rem;
 }
 
-.item-outer__header {
-  position: absolute;
-  top: 10px;
-  left: 10px;
+.item__header {
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
-.how-works__item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  width: 250px;
-  height: 250px;
-  margin: 0 1rem;
-  padding: 0 3rem;
-  background: $color4;
-  color: $white;
-  border-radius: 10rem;
+.item__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 250px;
+    height: 250px;
+    margin: 0 1rem;
+    padding: 0 3rem;
+    background: $color4;
+    color: $white;
+    border-radius: 10rem;
+}
+
+/*-- About Section --*/
+
+.about {
+    grid-column: span 12;
+}
+
+.about__inner {
+    display: flex;
+    max-width: 1200px;
+    margin: 2rem auto;
+}
+
+.about__img {
+    width: 50%;
+    height: auto;
+    margin-left: 2rem;
+}
+
+.about__info {
+    width: 50%;
+    padding: 2rem;
+
+    & h3 {
+        margin-bottom: 2rem;
+        color: darken($color: $color1, $amount: 10%);
+    }
+
+    & p:first-of-type {
+        font-weight: bold;
+        margin-bottom: 1rem;
+    }
+}
+
+/*------------------------------- 2. Footer ----*/
+footer {
+    grid-column: span 12;
+    padding: 4rem 0;
+}
+
+.footer-top {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
+.footer-top__left {
+    display: flex;
+    align-items: center;
+
+    & span:first-of-type {
+        margin-right: 0.8rem;
+    }
 }
