--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,7 +1,7 @@
-$color1: rgb(221, 110, 66);
-$color2: rgb(90, 147, 103);
+$color1: #dd6e42;
+$color2: #5a9367;
 $color3: #13293d;
-$color4: rgb(22, 50, 79);
+$color4: #16324f;
 $color5: #d7cdcc;
 
 $color1-opac: rgba(221, 110, 66, 0.836);
@@ -9,4 +9,4 @@ $color4-opac: rgba(22, 50, 79, 0.877);
 $grey-opac: rgba(0, 0, 0, 0.733);
 
 $white: #ffffff;
-$grey: #616161;
+$grey: #3f3f3f;
