--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -3,10 +3,11 @@ $color2: #5a9367;
 $color3: #13293d;
 $color4: #16324f;
 $color5: #d7cdcc;
+$white: #ffffff;
+$grey: #3f3f3f;
 
 $color1-opac: rgba(221, 110, 66, 0.836);
 $color4-opac: rgba(22, 50, 79, 0.877);
 $grey-opac: rgba(0, 0, 0, 0.733);
 
-$white: #ffffff;
-$grey: #3f3f3f;
+$max-width: 1200px;
