--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -2,16 +2,44 @@
 ------------------------------- Table of Contents ----
 ------------------------------------------------------
 
+1. Grid Mixins
+2. Flex Mixins
+
+*/
+/*-- Grid Template (12 Columns) --*/
+/*-- Grid Template (4 Columns) --*/
+/*--  --*/
+/*--  --*/
+/*----------------------------------------------------
+------------------------------- Table of Contents ----
+------------------------------------------------------
+
 1. Page Templates
     1.1. Home Page Template
+
 2. Navigation
     2.1. Navbar Top
     2.2. Navbar Bottom
     2.3. Navbar Container
     2.4. Navbar Menu
+
 3. Home Page Sections
     3.1. Hero Section
-    3.2. Hero Container
+        3.1.1. Hero
+        3.1.2. Hero Container
+        3.1.3. Hero Container Inner
+    3.2. Services Section
+        3.2.1. Services
+        3.2.2. Services Container
+    3.3. How It Works Section
+        3.3.1. How It Works
+        3.3.2. How It Works Container
+    3.4. About Section
+        3.4.1. About
+        3.4.2. About Container
+        3.4.3. About Image
+        3.4.4. About Info
+
 
 */
 /*--------------------------- 1. Page Templates ----*/
@@ -25,17 +53,12 @@
 
 /*------------------------------- 2. Navigation ----*/
 /*-- 2.1. Navbar Top --*/
-.navbar__top {
+.navbar__top, .navbar__bottom {
   grid-column: span 12;
   padding: 0 2rem;
 }
 
 /*-- 2.2. Navbar Bottom --*/
-.navbar__bottom {
-  grid-column: span 12;
-  padding: 0 2rem;
-}
-
 /*-- 2.3. Navbar Container --*/
 .navbar__container {
   display: -webkit-box;
@@ -47,8 +70,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0.8rem auto;
   max-width: 1200px;
+  margin: 0.8rem auto;
 }
 
 /*-- 2.4. Navbar Menu --*/
@@ -62,17 +85,19 @@
 }
 
 /*----------------------- 3. Home Page Sections ----*/
-/*-- 3.1. Hero Section ----*/
+/*----------------- 3.1. Hero Section ----*/
+/*-- 3.1.1. Hero ----*/
 .hero {
   grid-column: span 12;
 }
 
-.hero__container-outer {
+/*-- 3.1.2. Hero Container --*/
+.hero__container {
   padding: 0 2rem;
 }
 
-/*-- 3.2. Hero Container --*/
-.hero__container {
+/*-- 3.1.3. Hero Container Inner --*/
+.hero__container__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -83,16 +108,17 @@
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  margin: 6rem auto;
   max-width: 1200px;
+  margin: 6rem auto;
 }
 
-/*-- Services Section --*/
+/*------------- 3.2. Services Section ----*/
+/*-- 3.2.1. Services --*/
 .services {
   grid-column: span 12;
-  justify-items: center;
 }
 
+/*-- 3.2.2. Services Container --*/
 .services__container {
   display: -ms-grid;
   display: grid;
@@ -105,84 +131,34 @@
   margin: 4rem 10%;
 }
 
-/*-- How It Works Section --*/
+/*----------- 3.3. How It Works Section --*/
+/*-- 3.3.1. How It Works --*/
 .how-works {
   grid-column: span 12;
   margin: 4rem 2rem;
 }
 
-.how-works__inner {
+/*-- 3.3.2. How It Works Container --*/
+.how-works__container {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
-  grid-gap: 40px 5px;
+  grid-gap: 40px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   margin: 4rem 10% 0 10%;
 }
 
-.item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  width: 250px;
-  height: 250px;
-  margin: 0 1rem;
-  position: relative;
-  background: #16324f;
-  color: #ffffff;
-  border-radius: 0 10rem 10rem 10rem;
-}
-
-.item__header {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-}
-
-.item__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  width: 250px;
-  height: 250px;
-  margin: 0 1rem;
-  padding: 0 3rem;
-  background: #16324f;
-  color: #ffffff;
-  border-radius: 10rem;
-}
-
-/*-- About Section --*/
+/*------------------ 3.4. About Section --*/
+/*-- 3.4.1. About --*/
 .about {
   grid-column: span 12;
 }
 
-.about__inner {
+/*-- 3.4.2. About Container --*/
+.about__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -190,12 +166,14 @@
   margin: 2rem auto;
 }
 
+/*-- 3.4.3. About Image --*/
 .about__img {
   width: 50%;
   height: auto;
   margin-left: 2rem;
 }
 
+/*-- 3.4.4. About Info --*/
 .about__info {
   width: 50%;
   padding: 2rem;
@@ -207,16 +185,17 @@
 }
 
 .about__info p:first-of-type {
-  font-weight: bold;
   margin-bottom: 1rem;
+  font-weight: bold;
 }
 
-/*------------------------------- 2. Footer ----*/
+/*----------------------------------- ?. Footer ----*/
 footer {
   grid-column: span 12;
   padding: 4rem 2rem;
 }
 
+/*--------------------- ?.?. Footer Top --*/
 .footer-top, .footer-middle, .footer-bottom {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -224,10 +203,14 @@ footer {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 0 auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-width: 1200px;
+  margin: 0 auto;
 }
 
+/*-- ?.?.?. Footer Top Left --*/
 .footer-top__left {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -245,10 +228,12 @@ footer {
   margin-right: 0.8rem;
 }
 
+/*------------------ ?.?. Footer Middle --*/
 .footer-middle {
   padding: 4rem 0;
 }
 
+/*-- ?.?.?. Footer Middle Links --*/
 .footer-middle__links {
   margin-left: 2rem;
 }
@@ -269,10 +254,7 @@ footer {
   text-decoration: underline;
 }
 
-.footer-bottom p {
-  font-size: 0.8rem;
-}
-
+/*------------------ ?.?. Footer Bottom --*/
 /*----------------------------------------------------
 ------------------------------- Table of Contents ----
 ------------------------------------------------------
@@ -370,38 +352,6 @@ button:active {
   height: auto;
 }
 
-/*---------------------------------- 4. Headers ----*/
-h1, h2, h3 {
-  font-weight: 900;
-}
-
-.header-top {
-  -webkit-animation: header-translate 1s linear 1;
-          animation: header-translate 1s linear 1;
-}
-
-.header-middle {
-  -webkit-animation: header-translate 1s linear 1;
-          animation: header-translate 1s linear 1;
-}
-
-.header-bottom {
-  -webkit-animation: header-translate 1s linear 1;
-          animation: header-translate 1s linear 1;
-}
-
-h2 {
-  font-size: 3rem;
-}
-
-h3 {
-  font-size: 1.5rem;
-}
-
-.header-margin {
-  margin-left: 2rem;
-}
-
 /*------------------------------------ 5. Cards ----*/
 .card {
   height: auto;
@@ -458,6 +408,67 @@ hr {
 
 .footer-top__icon:first-of-type {
   margin-left: 0;
+}
+
+/*-------------------------- 8. Item ----*/
+.item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  width: 250px;
+  height: 250px;
+  margin: 0 1rem;
+  position: relative;
+  background: #16324f;
+  color: #ffffff;
+  border-radius: 0 10rem 10rem 10rem;
+}
+
+.item__header {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.item__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  width: 250px;
+  height: 250px;
+  margin: 0 1rem;
+  padding: 0 3rem;
+  background: #16324f;
+  color: #ffffff;
+  border-radius: 10rem;
+}
+
+.item__img {
+  width: 100px;
+  height: auto;
+  margin-bottom: 1rem;
 }
 
 @-webkit-keyframes bg-scale {
@@ -571,7 +582,7 @@ hr {
 
 @media (max-width: 767px) {
   .services__container,
-  .how-works__inner {
+  .how-works__container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -589,7 +600,7 @@ hr {
   .how-works h2 {
     margin: 0 2rem;
   }
-  .about__inner {
+  .about__container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -697,7 +708,7 @@ hr {
 
 @media (max-width: 1199px) {
   .services__container,
-  .how-works__inner {
+  .how-works__container {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
     justify-items: center;
@@ -728,12 +739,17 @@ hr {
 
 1. Universal
 2. Body
-3. Navigation
-    3.1. Navbar Top
-    3.2. Navbar Bottom
-    3.3. Navbar Phone
-4. Home Page
-    4.1. Hero Section
+3. Text
+    3.1. Headers
+    3.2. Paragraph
+    3.3. Small
+4. Navigation
+    4.1. Navbar Top
+    4.2. Navbar Bottom
+    4.3. Navbar Phone
+5. Home Page
+    5.1. Hero Section
+    5.2. About Section
 
 */
 /*-------------------------------- 1. Universal ----*/
@@ -752,36 +768,66 @@ body {
   text-rendering: optimizeLegibility;
 }
 
-/*--------------------------------------------------------------------------------------------*/
+/*------------------------------------- 3. Text ----*/
+/*-- 3.1. Headers --*/
+h1, h2, h3 {
+  font-weight: 900;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+.header-top {
+  -webkit-animation: header-translate 1s linear 1;
+          animation: header-translate 1s linear 1;
+}
+
+.header-middle {
+  -webkit-animation: header-translate 1s linear 1;
+          animation: header-translate 1s linear 1;
+}
+
+.header-bottom {
+  -webkit-animation: header-translate 1s linear 1;
+          animation: header-translate 1s linear 1;
+}
+
+/*-- 3.2. Paragraph --*/
 p {
   line-height: 1.5rem;
 }
 
+/*-- 3.3. Small --*/
 small {
   font-size: 0.8rem;
 }
 
-/*------------------------------- 3. Navigation ----*/
-/*-- 3.1. Navbar Top --*/
-.navbar__top {
+/*------------------------------- 4. Navigation ----*/
+/*-- 4.1. Navbar Top --*/
+.navbar__top, .navbar__bottom {
   background: #dd6e42;
   color: #3f3f3f;
 }
 
-/*-- 3.2. Navbar Bottom --*/
+/*-- 4.2. Navbar Bottom --*/
 .navbar__bottom {
   background: #16324f;
   color: #ffffff;
 }
 
-/*-- 3.3. Navbar Phone --*/
+/*-- 4.3. Navbar Phone --*/
 .navbar__phone {
   color: #ffffff;
   font-weight: bold;
 }
 
-/*-------------------------------- 4. Home Page ----*/
-/*-- 4.1. Hero --*/
+/*-------------------------------- 5. Home Page ----*/
+/*-- 5.1. Hero Section --*/
 .hero {
   position: relative;
   overflow: hidden;
@@ -806,23 +852,7 @@ small {
   color: #ffffff;
 }
 
-/*-- 4.2. Services --*/
-.services {
-  background: #ffffff;
-}
-
-/*-- 4.3. How It Works --*/
-.how-works {
-  background: #ffffff;
-}
-
-.item__img {
-  width: 100px;
-  height: auto;
-  margin-bottom: 1rem;
-}
-
-/*-- 4.4. About --*/
+/*-- 5.2. About Section --*/
 .about {
   background: #d7cdcc;
 }
