--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -4,14 +4,30 @@
 
 1. Page Templates
     1.1. Home Page Template
+
 2. Navigation
     2.1. Navbar Top
     2.2. Navbar Bottom
     2.3. Navbar Container
     2.4. Navbar Menu
+
 3. Home Page Sections
     3.1. Hero Section
-    3.2. Hero Container
+        3.1.1. Hero
+        3.1.2. Hero Container
+        3.1.3. Hero Container Inner
+    3.2. Services Section
+        3.2.1. Services
+        3.2.2. Services Container
+    3.3. How It Works Section
+        3.3.1. How It Works
+        3.3.2. How It Works Container
+    3.4. About Section
+        3.4.1. About
+        3.4.2. About Container
+        3.4.3. About Image
+        3.4.4. About Info
+
 
 */
 
@@ -19,31 +35,27 @@
 
 /*-- 1.1. Home Page Template --*/
 .body-home {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    @include grid-template-12;
 }
 
 /*------------------------------- 2. Navigation ----*/
 
 /*-- 2.1. Navbar Top --*/
 .navbar__top {
-    grid-column: span 12;
+    @include grid-col-12;
     padding: 0 2rem;
 }
 
 /*-- 2.2. Navbar Bottom --*/
 .navbar__bottom {
-    grid-column: span 12;
-    padding: 0 2rem;
+    @extend .navbar__top;
 }
 
 /*-- 2.3. Navbar Container --*/
 .navbar__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flex-between-center;
+    max-width: $max-width;
     margin: 0.8rem auto;
-    max-width: 1200px;
 }
 
 /*-- 2.4. Navbar Menu --*/
@@ -54,106 +66,79 @@
 
 /*----------------------- 3. Home Page Sections ----*/
 
-/*-- 3.1. Hero Section ----*/
+/*----------------- 3.1. Hero Section ----*/
+
+/*-- 3.1.1. Hero ----*/
 .hero {
-    grid-column: span 12;
+    @include grid-col-12;
 }
 
-.hero__container-outer {
+/*-- 3.1.2. Hero Container --*/
+.hero__container {
     padding: 0 2rem;
 }
 
-/*-- 3.2. Hero Container --*/
-.hero__container {
+/*-- 3.1.3. Hero Container Inner --*/
+.hero__container__inner {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    max-width: $max-width;
     margin: 6rem auto;
-    max-width: 1200px;
 }
 
-/*-- Services Section --*/
+
+/*------------- 3.2. Services Section ----*/
+
+/*-- 3.2.1. Services --*/
 .services {
-    grid-column: span 12;
-    justify-items: center;
+    @include grid-col-12;
 }
 
+/*-- 3.2.2. Services Container --*/
 .services__container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 40px;
-    justify-content: center;
+    @include grid-template-4;
     margin: 4rem 10%;
 }
 
-/*-- How It Works Section --*/
+
+/*----------- 3.3. How It Works Section --*/
+
+/*-- 3.3.1. How It Works --*/
 .how-works {
-    grid-column: span 12;
+    @include grid-col-12;
     margin: 4rem 2rem;
 }
 
-.how-works__inner {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 40px 5px;
-    justify-content: center;
+/*-- 3.3.2. How It Works Container --*/
+.how-works__container {
+    @include grid-template-4;
     margin: 4rem 10% 0 10%;
 }
 
-.item {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 250px;
-    height: 250px;
-    margin: 0 1rem;
-    position: relative;
-    background: $color4;
-    color: $white;
-    border-radius: 0 10rem 10rem 10rem;
-}
 
-.item__header {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-}
+/*------------------ 3.4. About Section --*/
 
-.item__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 250px;
-    height: 250px;
-    margin: 0 1rem;
-    padding: 0 3rem;
-    background: $color4;
-    color: $white;
-    border-radius: 10rem;
-}
-
-/*-- About Section --*/
-
+/*-- 3.4.1. About --*/
 .about {
-    grid-column: span 12;
+    @include grid-col-12;
 }
 
-.about__inner {
+/*-- 3.4.2. About Container --*/
+.about__container {
     display: flex;
-    max-width: 1200px;
+    max-width: $max-width;
     margin: 2rem auto;
 }
 
+/*-- 3.4.3. About Image --*/
 .about__img {
     width: 50%;
     height: auto;
     margin-left: 2rem;
 }
 
+/*-- 3.4.4. About Info --*/
 .about__info {
     width: 50%;
     padding: 2rem;
@@ -164,24 +149,31 @@
     }
 
     & p:first-of-type {
-        font-weight: bold;
         margin-bottom: 1rem;
+        font-weight: bold;
     }
 }
 
-/*------------------------------- 2. Footer ----*/
+
+
+
+
+
+
+/*----------------------------------- ?. Footer ----*/
 footer {
-    grid-column: span 12;
+    @include grid-col-12;
     padding: 4rem 2rem;
 }
 
+/*--------------------- ?.?. Footer Top --*/
 .footer-top {
-    display: flex;
-    justify-content: space-between;
+    @include flex-between-center;
+    max-width: $max-width;
     margin: 0 auto;
-    max-width: 1200px;
 }
 
+/*-- ?.?.?. Footer Top Left --*/
 .footer-top__left {
     display: flex;
     align-items: center;
@@ -195,11 +187,13 @@ footer {
     }
 }
 
+/*------------------ ?.?. Footer Middle --*/
 .footer-middle {
     @extend .footer-top;
     padding: 4rem 0;
 }
 
+/*-- ?.?.?. Footer Middle Links --*/
 .footer-middle__links {
     margin-left: 2rem;
 
@@ -220,10 +214,7 @@ footer {
     }
 }
 
+/*------------------ ?.?. Footer Bottom --*/
 .footer-bottom {
     @extend .footer-top;
-
-    & p {
-        font-size: 0.8rem;
-    }
 }
