--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -7,12 +7,17 @@
 
 1. Universal
 2. Body
-3. Navigation
-    3.1. Navbar Top
-    3.2. Navbar Bottom
-    3.3. Navbar Phone
-4. Home Page
-    4.1. Hero Section
+3. Text
+    3.1. Headers
+    3.2. Paragraph
+    3.3. Small
+4. Navigation
+    4.1. Navbar Top
+    4.2. Navbar Bottom
+    4.3. Navbar Phone
+5. Home Page
+    5.1. Hero Section
+    5.2. About Section
 
 */
 
@@ -31,38 +36,68 @@ body {
     text-rendering: optimizeLegibility;
 }
 
-/*--------------------------------------------------------------------------------------------*/
+/*------------------------------------- 3. Text ----*/
+
+/*-- 3.1. Headers --*/
+h1 {
+    font-weight: 900;
+}
+
+h2 {
+    @extend h1;
+    font-size: 3rem;
+}
+
+h3 {
+    @extend h1;
+    font-size: 1.5rem;
+}
+
+.header-top {
+    animation: header-translate 1s linear 1;
+}
+
+.header-middle {
+    animation: header-translate 1s linear 1;
+}
+
+.header-bottom {
+    animation: header-translate 1s linear 1;
+}
+
+/*-- 3.2. Paragraph --*/
 p {
     line-height: 1.5rem;
 }
 
+/*-- 3.3. Small --*/
 small {
     font-size: 0.8rem;
 }
 
-/*------------------------------- 3. Navigation ----*/
+/*------------------------------- 4. Navigation ----*/
 
-/*-- 3.1. Navbar Top --*/
+/*-- 4.1. Navbar Top --*/
 .navbar__top {
     background: $color1;
     color: $grey;
 }
 
-/*-- 3.2. Navbar Bottom --*/
+/*-- 4.2. Navbar Bottom --*/
 .navbar__bottom {
     background: $color4;
     color: $white;
 }
 
-/*-- 3.3. Navbar Phone --*/
+/*-- 4.3. Navbar Phone --*/
 .navbar__phone {
     color: $white;
     font-weight: bold;
 }
 
-/*-------------------------------- 4. Home Page ----*/
+/*-------------------------------- 5. Home Page ----*/
 
-/*-- 4.1. Hero --*/
+/*-- 5.1. Hero Section --*/
 .hero {
     position: relative;
     overflow: hidden;
@@ -86,24 +121,7 @@ small {
     color: $white;
 }
 
-/*-- 4.2. Services --*/
-
-.services {
-    background: $white;
-}
-
-/*-- 4.3. How It Works --*/
-.how-works {
-    background: $white;
-}
-
-.item__img {
-    width: 100px;
-    height: auto;
-    margin-bottom: 1rem;
-}
-
-/*-- 4.4. About --*/
+/*-- 5.2. About Section --*/
 .about {
     background: $color5;
 }
@@ -112,20 +130,6 @@ small {
     background: url("/src/images/1.jpg") center center no-repeat;
     background-size: cover;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*-- Footer --*/
 footer {
